# kaval.ai

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CLAUDE.md  LICENSE.txt  README.md  docker-compose.yml  junie.md  pyproject.toml  python-playground.html  requirements.txt  tslint.json
.github/workflows/: ci.yml  docs.yml  publish.yaml  pypi-publish.yml
.junie/: guidelines.md
.run/: All Tests - Backend.run.xml  Backend.run.xml  Frontend.run.xml
demo_agents/: bbking.yaml  herold.yaml  silverhand.yaml  socrates.yaml
demo_personas/: margit.yaml
demo_tasks/: chess.yaml  homework.yaml  prisonerdilemma.yaml
dockerfiles/: agent.Dockerfile  agent.entrypoint.sh  backoffice.Dockerfile  backoffice.entrypoint.sh  nginx.conf
docs/: conf.py  index.rst
docs/_ext/: kaval_playground.py  workflow_svgs.py
docs/_extra/: CNAME
docs/_includes/: chatbot-demo.html
docs/_static/: custom.css
docs/api/: agents.rst  backoffice.rst  functionkernel.rst  index.rst  llm_clients.rst  workflow.rst
docs/architecture/: high_level.rst  index.rst  streamer.rst  workflow_engine.rst
docs/guides/: agents.rst  index.rst  observability.rst  safety.rst  tools.rst  workflows.rst
docs/tutorials/: agents.ipynb  agents.rst  getting_started.rst  index.rst  installation.rst  llm_clients.ipynb  llm_clients.rst  observability_storage.rst  rag.ipynb  run_in_browser.rst  streamer.ipynb  workflow.ipynb  workflow_tutorial.md  workflow_tutorial.rst
docs/ui/: index.rst
embedding_profiles/: .gitignore
examples/: business_info_agent.py  v2_workflow_support_agent.yaml
examples/architecture/: streamer.py
examples/llm_clients/: 01_chat_completions.py  02_embeddings.py  03_image_generation.py
frontend/: angular.json  karma.conf.js  package-lock.json  package.json
frontend/src/: index.html  main.ts  proxy.conf.json  styles.css
kavalai/: __init__.py  agent.py  agent_service.py  crud.py  db.py  functionkernel.py  migrate_db.py  normalizer.py  paths.py  persona_simulator.py  run_context.py  schema_parser.py  server.py  stats.py  utils.py  workflow_model.py
kavalai/agents/: agent.py  agent_service.py  client.py  db.py  example.yaml  idb.py  llm_config.py  planning_agent.py  prompt.py  rag_service.py  resolvers.py  run_context.py  schema_parser.py  server.py  sessions.py  stats.py  task_logger.py  typeschema_parser.py  utils.py  workflow.py  workflow_model.py  workflow_validation.py
kavalai/backoffice/: db.py  embedding_projector.py  project_service.py  server.py  sessions.py  svg.py
kavalai/demo_agents/: herold.yaml  silverhand.yaml  socrates.yaml
kavalai/demo_tasks/: chess.yaml  prisonerdilemma.yaml
kavalai/embedding_profiles/: example.gemini.yaml  example.openai.yaml
kavalai/history/: __init__.py  base.py  sql.py
kavalai/llm_clients/: base_client.py  browser_client.py  common.py  embeddings.py  fastembed_client.py  gemini.py  gemini_client.py  kwargs_mapper.py  llm_client.py  ollama_client.py  openai.py  openai_client.py  streamer.py  with_retry.py
kavalai/llm_profiles/: example.gemini.yaml
kavalai/mcp/: client.py  rss.py
kavalai/migrations/: common.py
kavalai/prices/: __init__.py  common.py  gemini.py  openai.py
kavalai/rag/: __init__.py  base.py  postgres.py  sqllite.py
kavalai/tools/: cli_chat.py  index_csv.py  openapi_spec_parser.py  rss.py  selenium_browser.py
kavalai/workflow/: __init__.py  builder.py  clients.py  engine.py  expressions.py  models.py  render.py  state.py
llm_profiles/: .example.anthropic.yaml  .example.azure.yaml  .example.gemini.yaml  .example.ollama.yaml  .example.openai.yaml  .gitignore  example.openai.yaml
local_data/: .gitignore
notebooks/: 01_llm_usage.ipynb  02_rss_agent.ipynb  agents.ipynb  llm_clients.ipynb  rag.ipynb  streamer.ipynb  workflow.ipynb
personas/: anders.yaml  margit.yaml
scripts/: benchmark_embeddings.py  benchmark_ollama_embeddings.py  local_db.env  migrate_db.sh  test_db.env
sql_migrations/: V000__users__projects.sql
sql_migrations/app/: V000__agents.sql  V001__llm_profiles_and_stats.sql  V002__add_metrics_to_llm_call_stats.sql  V003__rag.sql  V003__rag_system.sql  V004__add_agent_id_to_llm_call_stats.sql  V005__rag_index_optimizations.sql  V006__rag_index_cleanups.sql
tests/: conftest.py  test_agent.py  test_agent_service.py  test_chatbot_demo.py  test_client.py  test_db.py  test_db_pooling.py  test_functionkernel.py  test_metadata_filtering.py  test_migrate_db.py  test_persona_simulator.py  test_resolvers.py  test_run_context.py  test_schema_parser.py  test_server.py  test_stats_tokens.py  test_to_plain.py  test_utils.py
tests/agents/: conftest.py  test_agent.py  test_agent_service.py  test_client.py  test_db.py  test_db_pooling.py  test_llm_config.py  test_metadata_filtering.py  test_planning_agent.py  test_planning_agent_duplicate_args.py  test_planning_agent_error_handling.py  test_planning_agent_errors.py  test_planning_agent_persistence.py  test_planning_agent_streaming.py  test_python_tool.py  test_rag_db.py  test_rag_service.py  test_rag_service_normalizer.py  test_resolvers.py  test_run_context.py  test_schema_parser.py  test_server.py  test_server_config.py  test_server_health.py  test_server_logging.py  test_server_streaming.py  test_sessions.py  test_stats.py  test_stats_tokens.py  test_task_custom_model.py  test_task_logger.py  test_to_plain.py  test_typeschema_parser.py  test_workflow.py  test_workflow_conditions.py  test_workflow_dirty_inputs.py  test_workflow_errors.py  test_workflow_history.py  test_workflow_mcp.py  test_workflow_mcp_new.py  (+6 more)
tests/backoffice/: conftest.py  test_db.py  test_embedding_projector.py  test_llm_configs.py  test_memberships.py  test_rag.py  test_rag_explorer.py  test_rag_pca_query.py  test_rag_query.py  test_server.py  test_sessions.py  test_svg.py  test_train_pca.py
tests/helpers/: mcp_server_errors.py  mcp_server_map.py  mcp_server_stdio.py
tests/history/: test_sql.py
webwidget/: README.md  chat-playground.html  kaval-chat.css  kaval-chat.js  kaval-playground.css  kaval-playground.js  python-playground.html
(+287 files in other folders)
