[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kavalai"
version = "0.1.5"
description = "Kaval.AI Enterprise Agent Management System"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Kaval.AI Team" },
]
dependencies = [
    "asyncpg",
    "authlib",
    "environs",
    "fastapi[standard]",
    "feedparser",
    "google-genai",
    "graphviz",
    "httpx",
    "itsdangerous",
    "json-schema-to-pydantic",
    "numpy",
    "mcp",
    "openai",
    "partial-json-parser",
    "psycopg2-binary",
    "rich",
    "sqlalchemy",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "testcontainers[postgres]",
    "python-dotenv",
    "pre-commit"
]
docs = [
    "sphinx<9",
    "sphinx-immaterial"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["kavalai*"]

[tool.setuptools.package-data]
"kavalai" = [
    "sql_migrations/**/*.sql",
    "demo_tasks/**/*.yaml",
    "demo_tasks/**/*.yml",
    "demo_personas/**/*.yaml",
    "demo_personas/**/*.yml",
    "demo_agents/**/*.yaml",
    "demo_agents/**/*.yml",
]


[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
source = ["kavalai"]

[tool.coverage.report]
show_missing = true
