[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kavalai"
version = "1.0.1"
description = "Kaval.AI is an open source Python SDK for writing AI agents and workflow automation pipelines. Suitable for conversational agents and generic workflow automation."
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Kaval.AI Team" },
]
# Mandatory core dependencies.
#
# These are intentionally restricted to libraries that work under pyodide, so
# the lightweight core can be imported and run in the browser. Most are
# pure-Python; numpy and pydantic-core are native but ship as prebuilt pyodide
# packages. Everything that needs an unsupported native extension or a heavy
# provider SDK lives under an optional extra below.
#
# Note on async SQLAlchemy: its async engine needs ``greenlet``, which
# SQLAlchemy pulls in automatically (via a platform marker) on normal installs.
# greenlet has no pyodide build, so we deliberately do NOT list it here; under
# pyodide the IndexedDB-backed SQLite database uses SQLAlchemy's *sync* engine,
# which does not require greenlet.
dependencies = [
    "aiosqlite",
    "environs",
    "httpx",
    "jinja2",
    "json-schema-to-pydantic",
    "loguru",
    "numpy",
    "partial-json-parser",
    "pydantic",
    "pyyaml",
    "rich",
    "sqlalchemy",
]

[project.optional-dependencies]
# LLM provider SDKs (not pyodide-compatible).
openai = ["openai"]
gemini = ["google-genai"]
ollama = ["ollama"]
llm = ["openai", "google-genai", "ollama"]
# Embeddings / RAG (native extensions).
rag = ["fastembed", "scikit-learn"]
# PostgreSQL drivers (native extensions).
postgres = ["asyncpg", "psycopg2-binary"]
# Model Context Protocol client support.
mcp = ["mcp"]
# REST / SSE servers and auth (backoffice + agent server).
server = [
    "fastapi[standard]",
    "authlib",
    "itsdangerous",
]
tools = [
    "crawl4ai",
    "feedparser",
]
notebooks = [
    "ipykernel>=7.3.0",
    "ipywidgets",
]
# Convenience extra pulling in the full, non-pyodide runtime.
all = [
    "openai",
    "google-genai",
    "ollama",
    "fastembed",
    "scikit-learn",
    "asyncpg",
    "psycopg2-binary",
    "mcp",
    "fastapi[standard]",
    "authlib",
    "itsdangerous",
    "crawl4ai",
    "feedparser",
]
test = [
    "aiosqlite",
    "pre-commit",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "python-dotenv",
    "testcontainers[postgres]",
    # Provider SDKs and native deps exercised by the test suite.
    "openai",
    "google-genai",
    "ollama",
    "fastembed",
    "scikit-learn",
    "asyncpg",
    "psycopg2-binary",
    "mcp",
    "fastapi[standard]",
    "authlib",
    "itsdangerous",
]
docs = [
    "sphinx<9",
    "sphinx-immaterial",
    "myst-nb",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["kavalai*"]

[tool.setuptools.package-data]
"kavalai" = [
    "sql_migrations/**/*.sql",
    "demo_agents/**/*.yaml",
    "demo_agents/**/*.yml",
]


[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
source = ["kavalai"]

[tool.coverage.report]
show_missing = true
